# meeting-countdown

./: Cargo.toml  README.md  readme.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: cli.rs  main.rs  math.rs  publish.rs  remaining.rs  timeloop.rs  topic.rs
src/.github/workflows/: rust.yml
src/display/: http_matrix.rs  mod.rs  multiple.rs  pixelmatrix.rs  retry.rs
src/timeloop/: math.rs  mod.rs
