[package]
name = "meeting-countdown"
description = "Prints out the rest time of a meeting compatible for led-matrix-remote"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/meeting-countdown"
authors = ["EdJoPaTo <meeting-countdown-rust@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "3", features = ["cargo", "env"] }
clap_complete = "3"

[dependencies]
anyhow = "1"
bracket-color = "0.8"
chrono = "0.4"
clap = { version = "3", features = ["cargo", "env", "wrap_help"] }
embedded-graphics = "0.7"
retry = { version = "1", default-features = false }
ureq = "2"
url = "2"

[dependencies.esp-wlan-led-matrix-client]
git = "https://github.com/EdJoPaTo/esp-wlan-led-matrix-rust-client"
branch = "main"
default-features = false
features = ["embedded-graphics-impl"]

[dev-dependencies]
float_eq = "0.7"
