[package]
name = "meeting-countdown"
description = "Prints out the rest time of a meeting compatible for led-matrix-remote"
version = "0.6.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/meeting-countdown"
authors = ["EdJoPaTo <meeting-countdown-rust@edjopato.de>"]
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
codegen-units = 1
lto = true

[build-dependencies]
clap = { version = "4", features = ["deprecated", "derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
url = "2"

[dependencies]
anyhow = "1"
bracket-color = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
embedded-graphics = "0.8"
retry = { version = "2", default-features = false }
ureq = { version = "3", default-features = false }
url = "2"

[dependencies.esp-remotecontrolled-led-matrix-client]
git = "https://github.com/EdJoPaTo/esp-remotecontrolled-led-matrix-rust-client"
branch = "main"
default-features = false
features = ["embedded-graphics"]

[dev-dependencies]
float_eq = "1"
